# veho

./: Cargo.toml  README.md
src/: lib.rs
src/columns/: getters.rs  mapper.rs  mod.rs  setters.rs
src/columns/reference/: mod.rs
src/entries/: into_hashmaps.rs  mod.rs  unwinds.rs  winds.rs
src/entries/reference/: into_hashmaps.rs  mod.rs  unwinds.rs
src/entries/unwinds/: mod.rs  move_unwind.rs  move_unwinds.rs  ref_unwind.rs  ref_unwinds.rs
src/hashmap/: cloner.rs  init.rs  mappers.rs  mod.rs
src/hashmap/inits/: mod.rs  move_init.rs  ref_init.rs
src/iterable/: mapper.rs  mod.rs  zipper.rs
src/iterable/enumerate/: mapper.rs
src/matrix/: alias.rs  init.rs  inits.rs  mapper.rs  mappers.rs  mod.rs  mutaters.rs  reduces.rs  transposes.rs  utils.rs  zippers.rs
src/vector/: indexers.rs  inits.rs  mapper.rs  mappers.rs  mod.rs  reduces.rs  zipper.rs  zippers.rs
tests/: integration_test.rs
tests/alpha/: beta_zip_test.rs  declarative_marco_test.rs  izip_test.rs  mod.rs  multizip_test.rs  mutaters_test.rs  variable_mutabilities_test.rs
tests/alpha/columns_test/: getter_test.rs  mapper_test.rs  mod.rs
tests/alpha/init_test/: init_trait_test.rs  mod.rs
tests/alpha/mut_test/: matrix_iter_mut_test_not_worked.rs  (+3 more)
tests/deco/: entries.rs  mod.rs
tests/hashmap/: hashmap_test.rs  mod.rs
tests/mut_test/: alpha_mut_test_not_worked.rs  mod.rs  simplest_iter_mut_test_worked.rs
tests/veho_test/: iterable_test.rs  mod.rs  multizip_test.rs
tests/zip_test/: mod.rs
units/matrix/: mappers.rs
units/vector/: mapper_trait.rs  mappers.rs  mod.rs  zippers.rs
(+7 files in other folders)
