[package]
name = "veho"
description = "a iterable toolset"
version = "0.0.11"
authors = ["Hoyeung Wong <hoyeungw@outlook.com>"]
readme = "README.md"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
#spare = ">=0.0.1"